# aoc2023

./: Cargo.toml  newday.sh
src/: aoc_tests.rs  day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  lib.rs  template.rs
